color change P element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -340,7 +340,7 @@ section .container {
   font-weight: 700;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #fff;
+  color: gold;
 }
 
 /*--------------------------------------------------------------
