--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,8 +324,8 @@ section .container {
   margin: 0 0 20px 0;
   letter-spacing: 2px;
   text-transform: uppercase;
-  color: #aaaaaa;
-  font-family:'Major Mono Display', monospace;
+  color: #ed3c0d;
+  font-family: "font-family": 'Albert Sans', sans-serif;
 }
 .section-title h2::after {
   content: "";
