--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ body::before {
 
 a {
   color: #1FB2F0
-  text-decoration: none;
+  text-decoration none;
 }
 
 a:hover {
@@ -76,11 +76,12 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1;
   display: inline-block;
 }
+
 #header h2 {
   font-size: 24px;
   margin-top: 20px;
-  color: #FFF51C);
-}
+  color: #FFF51C;
+
 #header h2 span {
   color:#FFF51C;
   border-bottom: 2px solid #1FB2F0;
@@ -325,8 +326,7 @@ section .container {
   letter-spacing: 2px;
   text-transform: uppercase;
   color: #ed3c0d;
-  font-family: "font-family": 'Albert Sans', sans-serif;
-}
+  font-family: "font-family" 'Albert Sans', sans-serif;}
 .section-title h2::after {
   content: "";
   width: 120px;
@@ -847,17 +847,17 @@ section .container {
   color: #fff;
   z-index: 999999;
 }
-@media (max-width: 992px) {
-  .credits {
-    text-align: center;
-    padding: 10px;
-    background: rgba(0, 0, 0, 0.8);
+@media (max-width: 992px) 
+  {credits
+    text-align center
+    padding10px
+    background rgba0, 0, 0, 0.5     
   }
-}
+
 .credits a {
   color: #18d26e;
   transition: 0.3s;
 }
 .credits a:hover {
   color: #fff;
-}
+}     /style>     
