--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,16 +10,15 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  font-weight: bold;
   background-color: #040404;
-  color: #FFF51C;
+  color: #fff;
   position: relative;
   background: transparent;
 }
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../visual/website_0.jpg") top right no-repeat;
+  background: #040404 url("../img/bg.jpg") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
@@ -34,17 +33,17 @@ body::before {
 }
 
 a {
-  color: #1FB2F0
-  text-decoration none;
+  color: #18d26e;
+  text-decoration: none;
 }
 
 a:hover {
-  color: #ed3c0d;;
+  color: #35e888;
   text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
-font-family: 'Major Mono Display', monospace;
+  font-family: "Raleway", sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -64,28 +63,25 @@ font-family: 'Major Mono Display', monospace;
 }
 #header h1 {
   font-size: 48px;
-  font-weight: bold;
   margin: 0;
   padding: 0;
   line-height: 1;
   font-weight: 700;
-  font-family: 'Major Mono Display', monospace;
+  font-family: "Poppins", sans-serif;
 }
 #header h1 a, #header h1 a:hover {
-  color: #FFF51C;
+  color: #fff;
   line-height: 1;
   display: inline-block;
 }
-
 #header h2 {
   font-size: 24px;
-    margin-top: 20px;
-  color: #FFF51C;
-
+  margin-top: 20px;
+  color: rgba(255, 255, 255, 0.8);
+}
 #header h2 span {
-  color:#FFF51C;
-  font-weight: 400;
-  border-bottom: 2px solid #1FB2F0;
+  color: #fff;
+  border-bottom: 2px solid #18d26e;
   padding-bottom: 6px;
 }
 #header img {
@@ -102,7 +98,7 @@ font-family: 'Major Mono Display', monospace;
   justify-content: center;
   align-items: center;
   background: rgba(255, 255, 255, 0.1);
-  color: #FFF51C;
+  color: #fff;
   line-height: 1;
   margin-right: 8px;
   border-radius: 50%;
@@ -110,11 +106,10 @@ font-family: 'Major Mono Display', monospace;
   height: 40px;
 }
 #header .social-links a:hover {
-  background: #ed3c0d;
+  background: #18d26e;
 }
-@media (max-width: 992px) 
-{}
-header h1 {
+@media (max-width: 992px) {
+  #header h1 {
     font-size: 36px;
   }
   #header h2 {
@@ -191,7 +186,7 @@ header h1 {
   align-items: center;
   justify-content: space-between;
   padding: 0;
-  font-family: 'Major Mono Display', monospace;
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.7);
@@ -210,7 +205,7 @@ header h1 {
   height: 2px;
   bottom: -4px;
   left: 0;
-  background-color: #1FB2F0;
+  background-color: #18d26e;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -220,14 +215,14 @@ header h1 {
   width: 25px;
 }
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #ed3c0d;
+  color: #fff;
 }
 
 /**
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #ed3c0d;
+  color: #fff;
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -326,9 +321,10 @@ section .container {
   line-height: 1px;
   margin: 0 0 20px 0;
   letter-spacing: 2px;
-  text-transform: none;
-  color: #ed3c0d;
-  font-family: "font-family" 'Albert Sans', sans-serif;}
+  text-transform: uppercase;
+  color: #aaaaaa;
+  font-family: "Poppins", sans-serif;
+}
 .section-title h2::after {
   content: "";
   width: 120px;
@@ -343,8 +339,8 @@ section .container {
   font-size: 36px;
   font-weight: 700;
   text-transform: uppercase;
-  font-family: 'Major Mono Display', monospace;
-  color: gold;
+  font-family: "Poppins", sans-serif;
+  color: #fff;
 }
 
 /*--------------------------------------------------------------
@@ -378,6 +374,44 @@ section .container {
 }
 
 /*--------------------------------------------------------------
+# Counts
+--------------------------------------------------------------*/
+.counts {
+  padding: 70px 0 60px;
+}
+.counts .count-box {
+  padding: 30px 30px 25px 30px;
+  width: 100%;
+  position: relative;
+  text-align: center;
+  background: rgba(255, 255, 255, 0.08);
+}
+.counts .count-box i {
+  position: absolute;
+  top: -25px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 24px;
+  background: rgba(255, 255, 255, 0.1);
+  padding: 12px;
+  color: #18d26e;
+  border-radius: 50px;
+  line-height: 0;
+}
+.counts .count-box span {
+  font-size: 36px;
+  display: block;
+  font-weight: 600;
+  color: #fff;
+}
+.counts .count-box p {
+  padding: 0;
+  margin: 0;
+  font-family: "Raleway", sans-serif;
+  font-size: 14px;
+}
+
+/*--------------------------------------------------------------
 # Skills
 --------------------------------------------------------------*/
 .skills .progress {
@@ -392,7 +426,7 @@ section .container {
   text-transform: uppercase;
   display: block;
   font-weight: 600;
-  font-family:'Major Mono Display', monospace;
+  font-family: "Poppins", sans-serif;
   color: #fff;
 }
 .skills .progress .skill .val {
@@ -436,6 +470,73 @@ section .container {
   background: rgba(255, 255, 255, 0.12);
 }
 
+/*--------------------------------------------------------------
+# Testimonials
+--------------------------------------------------------------*/
+.testimonials .testimonials-carousel, .testimonials .testimonials-slider {
+  overflow: hidden;
+}
+.testimonials .testimonial-item {
+  box-sizing: content-box;
+  min-height: 320px;
+}
+.testimonials .testimonial-item .testimonial-img {
+  width: 90px;
+  border-radius: 50%;
+  margin: -40px 0 0 40px;
+  position: relative;
+  z-index: 2;
+  border: 6px solid rgba(255, 255, 255, 0.12);
+}
+.testimonials .testimonial-item h3 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 10px 0 5px 45px;
+  color: #fff;
+}
+.testimonials .testimonial-item h4 {
+  font-size: 14px;
+  color: #999;
+  margin: 0 0 0 45px;
+}
+.testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
+  color: rgba(255, 255, 255, 0.25);
+  font-size: 26px;
+}
+.testimonials .testimonial-item .quote-icon-left {
+  display: inline-block;
+  left: -5px;
+  position: relative;
+}
+.testimonials .testimonial-item .quote-icon-right {
+  display: inline-block;
+  right: -5px;
+  position: relative;
+  top: 10px;
+}
+.testimonials .testimonial-item p {
+  font-style: italic;
+  margin: 0 15px 0 15px;
+  padding: 20px 20px 60px 20px;
+  background: rgba(255, 255, 255, 0.1);
+  position: relative;
+  border-radius: 6px;
+  position: relative;
+  z-index: 1;
+}
+.testimonials .swiper-pagination {
+  margin-top: 20px;
+  position: relative;
+}
+.testimonials .swiper-pagination .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  opacity: 1;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.testimonials .swiper-pagination .swiper-pagination-bullet-active {
+  background-color: #18d26e;
+}
 
 /*--------------------------------------------------------------
 # Resume
@@ -458,7 +559,7 @@ section .container {
   font-size: 18px;
   font-weight: 600;
   text-transform: uppercase;
-  font-family: font-family 'Major Mono Display', monospace;
+  font-family: "Poppins", sans-serif;
   color: #18d26e;
   margin-bottom: 10px;
 }
@@ -489,6 +590,74 @@ section .container {
   top: 0;
   background: #18d26e;
   border: 2px solid #18d26e;
+}
+
+/*--------------------------------------------------------------
+# Services
+--------------------------------------------------------------*/
+.services .icon-box {
+  text-align: center;
+  background: rgba(204, 204, 204, 0.1);
+  padding: 80px 20px;
+  transition: all ease-in-out 0.3s;
+}
+.services .icon-box .icon {
+  margin: 0 auto;
+  width: 64px;
+  height: 64px;
+  background: #18d26e;
+  border-radius: 5px;
+  transition: all 0.3s ease-out 0s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  transform-style: preserve-3d;
+}
+.services .icon-box .icon i {
+  color: #fff;
+  font-size: 28px;
+}
+.services .icon-box .icon::before {
+  position: absolute;
+  content: "";
+  left: -8px;
+  top: -8px;
+  height: 100%;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.15);
+  border-radius: 5px;
+  transition: all 0.3s ease-out 0s;
+  transform: translateZ(-1px);
+}
+.services .icon-box h4 {
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 24px;
+}
+.services .icon-box h4 a {
+  color: #fff;
+}
+.services .icon-box p {
+  line-height: 24px;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+.services .icon-box:hover {
+  background: #18d26e;
+  border-color: #18d26e;
+}
+.services .icon-box:hover .icon {
+  background: #fff;
+}
+.services .icon-box:hover .icon i {
+  color: #18d26e;
+}
+.services .icon-box:hover .icon::before {
+  background: #35e888;
+}
+.services .icon-box:hover h4 a, .services .icon-box:hover p {
+  color: #fff;
 }
 
 /*--------------------------------------------------------------
@@ -818,29 +987,6 @@ section .container {
 .contact .php-email-form button[type=submit]:hover {
   background: #15bb62;
 }
-
-
-.credits {
-  text-align: center;
-  padding: 10px;
-  background: rgba(0, 0, 0, 0.5);
-}
-
-.credits img {
-  width: 20px;
-  height: 20px;
-  vertical-align: middle; /* To vertically align the image with the text */
-}
-
-.credits span {
-  color: #18d26e;
-  transition: 0.3s;
-}
-
-.credits a:hover span {
-  color: #fff;
-}
-
 @-webkit-keyframes animate-loading {
   0% {
     transform: rotate(0deg);
@@ -856,4 +1002,33 @@ section .container {
   100% {
     transform: rotate(360deg);
   }
+}
+
+/*--------------------------------------------------------------
+# Credits
+--------------------------------------------------------------*/
+.credits {
+  position: fixed;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  padding: 15px;
+  text-align: right;
+  font-size: 13px;
+  color: #fff;
+  z-index: 999999;
+}
+@media (max-width: 992px) {
+  .credits {
+    text-align: center;
+    padding: 10px;
+    background: rgba(0, 0, 0, 0.8);
+  }
+}
+.credits a {
+  color: #18d26e;
+  transition: 0.3s;
+}
+.credits a:hover {
+  color: #fff;
 }
