--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../visual/bg.png") top right no-repeat;
+  display: flex;
+  background-image: url('https://example.com/path-to-your-image/bg.jpg');
   background-size: cover;
   left: 0;
   right: 0;
@@ -26,6 +27,8 @@ body::before {
   height: 100vh;
   z-index: -1;
 }
+
+
 @media (min-width: 1024px) {
   body::before {
     background-attachment: fixed;
