--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
 # General
 --------------------------------------------------------------*/
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: acier-bat-outline, sans-serif;
   background-color: #040404;
   color: #fff;
   position: relative;
@@ -43,7 +43,7 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: acier-bat-outline, sans-serif;
 }
 
 /*--------------------------------------------------------------
@@ -67,7 +67,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
   line-height: 1;
   font-weight: 700;
-  font-family: "Poppins", sans-serif;
+  ont-family: "como", sans-serif;
 }
 #header h1 a, #header h1 a:hover {
   color: #fff;
@@ -186,7 +186,7 @@ h1, h2, h3, h4, h5, h6 {
   align-items: center;
   justify-content: space-between;
   padding: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: "fairwater-open-serif", sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: rgba(255, 255, 255, 0.7);
@@ -323,7 +323,7 @@ section .container {
   letter-spacing: 2px;
   text-transform: uppercase;
   color: #aaaaaa;
-  font-family: "Poppins", sans-serif;
+  font-family: "gimlet-display", serif;
 }
 .section-title h2::after {
   content: "";
@@ -339,7 +339,7 @@ section .container {
   font-size: 36px;
   font-weight: 700;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
+  font-family: "acier-bat-noir", sans-serif;
   color: #fff;
 }
 
@@ -407,7 +407,7 @@ section .container {
 .counts .count-box p {
   padding: 0;
   margin: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: "como", sans-serif;
   font-size: 14px;
 }
 
@@ -426,7 +426,7 @@ section .container {
   text-transform: uppercase;
   display: block;
   font-weight: 600;
-  font-family: "Poppins", sans-serif;
+  font-family: "como", sans-serif;
   color: #fff;
 }
 .skills .progress .skill .val {
@@ -559,7 +559,7 @@ section .container {
   font-size: 18px;
   font-weight: 600;
   text-transform: uppercase;
-  font-family: "Poppins", sans-serif;
+  font-family: "acier-bat-noir", sans-serif;
   color: #1FB2F0;
   margin-bottom: 10px;
 }
