--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,9 +81,9 @@ h1, h2, h3, h4, h5, h6 {
 font-family:fairwater-solid-serif;
 }
 #header h2 span {
-  color: #fff;
-  border-bottom: 2px solid #FFF51C;
-  padding-bottom: 6px;
+  color: #1FB2F0;
+  border-bottom: 1px dotted #FFF51C;
+  padding-bottom: 4px;
   font-family:fairwater-open-serif;
 }
 #header img {
@@ -100,7 +100,7 @@ font-family:fairwater-solid-serif;
   justify-content: center;
   align-items: center;
   background: rgba(255, 255, 255, 0.1);
-  color: #fff;
+  color: #1FB2F0;
   line-height: 1;
   margin-right: 8px;
   border-radius: 50%;
@@ -108,7 +108,7 @@ font-family:fairwater-solid-serif;
   height: 40px;
 }
 #header .social-links a:hover {
-  background: #1FB2F0;
+  background: #F03428s;
 }
 @media (max-width: 992px) {
   #header h1 {
@@ -191,7 +191,7 @@ font-family:fairwater-solid-serif;
   font-family: "fairwater-open-serif", sans-serif;
   font-size: 16px;
   font-weight: 400;
-  color: rgba(255, 255, 255, 0.7);
+  color: #1FB2F0
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -207,7 +207,7 @@ font-family:fairwater-solid-serif;
   height: 2px;
   bottom: -4px;
   left: 0;
-  background-color: #1FB2F0;
+  background-color: #fff;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -217,7 +217,7 @@ font-family:fairwater-solid-serif;
   width: 25px;
 }
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #fff;
+  color: #FFF51C;
 }
 
 /**
@@ -251,7 +251,7 @@ font-family:fairwater-solid-serif;
   right: 0;
   left: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(255, 255, 255, 0.088);
   transition: 0.3s;
   z-index: 999;
   margin-top: 0;
@@ -271,7 +271,7 @@ font-family:fairwater-solid-serif;
   padding: 10px 0;
   overflow-y: auto;
   transition: 0.3s;
-  border: 2px solid rgba(255, 255, 255, 0.2);
+  border: 2px solid #1FB2F0;
 }
 .navbar-mobile li {
   padding: 12px 20px;
@@ -333,7 +333,7 @@ section .container {
   width: 120px;
   height: 1px;
   display: inline-block;
-  background: #FFF51C;
+  background: #F03428;
   margin: 4px 10px;
 }
 .section-title p {
