--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../visual/bg.jpg") top right no-repeat;
+  background: #040404 url("../visual/bg.png") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
@@ -81,7 +81,7 @@ h1, h2, h3, h4, h5, h6 {
 font-family:fairwater-solid-serif;
 }
 #header h2 span {
-  color: #1FB2F0;
+  color: #000000;
   border-bottom: 1px dotted #ffffff;
   padding-bottom: 4px;
   font-family:fairwater-open-serif;
@@ -100,7 +100,7 @@ font-family:fairwater-solid-serif;
   justify-content: center;
   align-items: center;
   background: rgba(255, 255, 255, 0.1);
-  color: #1FB2F0;
+  color: #ffffff;
   line-height: 1;
   margin-right: 8px;
   border-radius: 50%;
@@ -191,7 +191,7 @@ font-family:fairwater-solid-serif;
   font-family: "fairwater-open-serif", sans-serif;
   font-size: 16px;
   font-weight: 400;
-  color: #1FB2F0;
+  color: #ffffff;
   white-space: nowrap;
   transition: 0.3s;
 }
@@ -217,7 +217,7 @@ font-family:fairwater-solid-serif;
   width: 25px;
 }
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #FFF51C;
+  color: #ff1c1c;
 }
 
 /**
@@ -271,7 +271,7 @@ font-family:fairwater-solid-serif;
   padding: 10px 0;
   overflow-y: auto;
   transition: 0.3s;
-  border: 2px solid #1FB2F0;
+  border: 2px solid #f01f1f;
 }
 .navbar-mobile li {
   padding: 12px 20px;
