--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
-/**
-* Template Name: Personal - v4.5.0
-* Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -18,7 +11,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 url("../img/background.png") top right no-repeat;
+  background: #040404 url("../img/ezgi.gif") top right no-repeat;
   background-size: cover;
   left: 0;
   right: 0;
@@ -46,6 +39,23 @@ h1, h2, h3, h4, h5, h6 {
   font-family: athena, sans-serif;
   font-style: normal;
 }
+
+#video-intro {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1; /* Place the video behind other content */
+}
+
+#intro-video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
 
 /*--------------------------------------------------------------
 # Header
