--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,7 +186,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* Common styles for all screen sizes */
-.portfolio #portfolio-flters li {
+
+ #portfolio-flters li  
+  #portfolio-flters li
+  
+  {
   /* Your general styles here */
 }
 
@@ -202,7 +206,8 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Responsive styles for screens smaller than 768px (typical mobile screens) */
 @media only screen and (max-width: 768px) {
-  .portfolio #portfolio-flters li {
+  .portfolio
+  #portfolio- flters li {
     /* Adjust styles for smaller screens */
   }
 
@@ -501,10 +506,7 @@ section .container {
   background-color: #ff1c1c;
 }
 
-/*--------------------------------------------------------------
-# Interests
---------------------------------------------------------------*/
-.interests .icon-box {
+interests .icon-box {
   display: flex;
   align-items: center;
   padding: 20px;
