--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,14 @@ body {
   z-index: -1; 
 }
 
+#background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
 body::before {
   content: "";
   position: fixed;
